--- a/src/App.css
+++ b/src/App.css
@@ -54,3 +54,26 @@
     margin-bottom: 40px;
     margin-top: 40px;
 }
+
+.fade-enter {
+    opacity: 0;
+    visibility: hidden;
+    transition: all ease 4s;
+}
+
+.fade-enter-active {
+    opacity: 1;
+    visibility: visible;
+    transition: all ease 4s;
+}
+
+.fade-exit {
+    visibility: visible;
+    opacity: 0;
+}
+
+.fade-exit-active {
+    opacity: 0;
+    visibility: hidden;
+    transition: all ease 4s;
+}
