--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap");
 
 * {
     margin: 0;
@@ -9,34 +8,51 @@
 body {
     box-sizing: border-box;
     image-rendering: -webkit-optimize-contrast;
-    background: url("./images/bg1.jpeg") no-repeat center left;
-    background-size: cover;
+    /* background: url("./images/bg1.jpeg") no-repeat center left;
+    background-size: cover; */
+    background: #41295a; /* fallback for old browsers */
+    background: -webkit-linear-gradient(
+        to right,
+        #2f0743,
+        #41295a
+    ); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(
+        to right,
+        #2f0743,
+        #41295a
+    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     font-family: "Montserrat", sans-serif;
 }
 
 nav {
-    margin-top: 40px;
     margin-bottom: 40px;
-    text-align: center;
+    display: flex;
+}
+
+nav img {
+    height: 30px;
+    width: 30px;
+    margin-right: 5px;
+    vertical-align: middle;
 }
 
 nav a {
-    margin-right: 10px;
-    color: rgb(87, 1, 87);
-    font-family: "Homemade Apple", cursive;
-    padding: 5px 15px;
-    font-size: 1.4rem;
+    color: #fff;
+    text-align: center;
+    margin-right: 15px;
+    font-size: 1.2rem;
+    animation: fade 2s ease-in forwards;
 }
 
 nav a:hover {
-    color: #ffffff;
+    cursor: pointer;
 }
 
 .moving-panels {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 50vh;
+    height: 35vh;
     animation: fade 2s ease-in forwards;
     opacity: 1;
 }
@@ -51,7 +67,7 @@ nav a:hover {
 }
 
 .panels {
-    width: 150px;
+    width: 160px;
     height: 350px;
     background: white;
     margin: 0 10px;
@@ -60,7 +76,7 @@ nav a:hover {
     animation-timing-function: ease-in;
     animation-duration: 2.5s;
     position: relative;
-    top: 50px;
+    top: 140px;
 }
 
 .panels:nth-child(1) {
@@ -97,7 +113,7 @@ nav a:hover {
 }
 
 .panels:nth-child(5) {
-    background-image: url("//rickandmortyapi.com/api/character/avatar/331.jpeg");
+    background-image: url("//rickandmortyapi.com/api/character/avatar/3.jpeg");
     background-position: center center;
     background-size: cover;
     animation-name: moving;
@@ -106,12 +122,21 @@ nav a:hover {
 }
 
 .panels:nth-child(6) {
-    background-image: url("//rickandmortyapi.com/api/character/avatar/331.jpeg");
+    background-image: url("//rickandmortyapi.com/api/character/avatar/5.jpeg");
     background-position: center center;
     background-size: cover;
     animation-name: moving;
     animation-duration: 2.5s;
     animation-delay: 0.5s;
+}
+
+.panels:nth-child(7) {
+    background-image: url("//rickandmortyapi.com/api/character/avatar/4.jpeg");
+    background-position: center center;
+    background-size: cover;
+    animation-name: moving;
+    animation-duration: 2.5s;
+    animation-delay: 0.6s;
 }
 
 @keyframes moving {
@@ -120,16 +145,15 @@ nav a:hover {
     }
 
     100% {
-        top: 50px;
+        top: 140px;
     }
 }
 
 #logo {
     position: absolute;
     transform: translate(-50%, -50%);
-    top: 60%;
+    top: 65%;
     left: 50%;
-    height: 120px;
     animation: fill 0.5s ease forwards 1.5s;
     fill-opacity: 1;
 }
