--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Audiowide&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 
 * {
     margin: 0;
@@ -328,12 +330,25 @@ h4 {
     margin-bottom: 30px;
 }
 
+.charsWrapper h1 {
+    font-family: "Press Start 2P", cursive;
+}
+
 .charsWrapper .first-col {
     text-align: right;
 }
 
 .charsWrapper .first-col img {
     border-radius: 50%;
+    margin-top: 67px;
+}
+
+.charsWrapper .second-col h1 {
+    margin-top: 47px;
+    /* background: -webkit-linear-gradient(#eee, #333);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; */
+    text-shadow: 2px 2px 3px red;
 }
 
 .charsWrapper ul {
@@ -345,6 +360,8 @@ h4 {
     margin-bottom: 15px;
     font-size: 1.2rem;
     font-weight: bold;
+    text-shadow: 2px 2px 4px black;
+    font-family: "Audiowide", cursive;
 }
 
 .charsWrapper .redBox {
